# intel_ai_inference_lab

./: .gitignore  Makefile  PROMPTS.md  README.md  pyproject.toml  requirements.txt
inference_lab/: __init__.py  __main__.py  benchmark.py  cli.py  metrics.py  preprocess.py  report.py  types.py  utils.py
inference_lab/runtimes/: __init__.py  base.py  onnx_runner.py  openvino_runner.py
models/: README.md
sample_images/: checkerboard.ppm  gradient.ppm
scripts/: export_torchvision_to_onnx.py
tests/: test_benchmark.py  test_metrics.py  test_preprocess.py  test_report.py
